<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.giuliano.leaf.controller.LoginActivity"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/login_progress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:background="@drawable/progress_bar"
        />

    <!-- Login Progress -->

    <ScrollView
        android:id="@+id/login_form"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_weight="0.99"
        android:background="@android:color/background_light">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="190dp"
                android:layout_height="182dp"
                android:adjustViewBounds="false"
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Username"
                    android:inputType="textPersonName"
                    android:nextFocusLeft="@id/username"
                    android:nextFocusUp="@id/username"
                    android:selectAllOnFocus="false"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:nextFocusLeft="@id/password"
                    android:nextFocusUp="@id/password"
                    android:selectAllOnFocus="false"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:focusedByDefault="false"
                android:text="@string/Sign_In"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/textLogin" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusedByDefault="false"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
